@@ -1677,8 +1677,14 @@ sub arc {
                 $opts{'d2'}, $opts{fill}{fill});
   }
   else {
-    i_arc($self->{IMG},$opts{'x'},$opts{'y'},$opts{'r'},$opts{'d1'},
-          $opts{'d2'},$opts{'color'}); 
+    if ($opts{d1} == 0 && $opts{d2} == 361 && $opts{aa}) {
+      i_circle_aa($self->{IMG}, $opts{'x'}, $opts{'y'}, $opts{'r'}, 
+                  $opts{'color'});
+    }
+    else {
+      i_arc($self->{IMG},$opts{'x'},$opts{'y'},$opts{'r'},$opts{'d1'},
+            $opts{'d2'},$opts{'color'}); 
+    }
   }
 
   return $self;
